# JobseekerAgent

./: .gitignore  README.md  pyproject.toml
jobseeker_agent/: README.md
postulation_workflow/: linkedin_jobs.json
postulation_workflow/src/: linkedin_scrapper.py
src/jobseeker_agent/corrector/: experience_ranker.py  introducer.py  keyword_corrector.py  keyword_executor.py  keyword_extractor.py  keyword_extractor_2.py  keyword_inserter.py  main.py  ranker.py  resume_manipulator.py  skill_ranker.py
src/jobseeker_agent/corrector/agents/: experience_corrector.md  experience_corrector.py  experience_ranker.md  experience_ranker.py  introducer.md  keyword_corrector.py  keyword_executor.md  keyword_extractor.py  keyword_extractor_2.py  keyword_inserter.py  ranker.md  ranker.py  skill_ranker.md  skill_ranker.py  title_corrector.md  title_corrector.py
src/jobseeker_agent/corrector/interface/: main.py  routes.py  state.py  tasks.py
src/jobseeker_agent/customizer/: README.md
src/jobseeker_agent/customizer/agents/: introducer.md  introducer.py  keyword_extractor.md  keyword_extractor.py  ranker.py  title_corrector.py
src/jobseeker_agent/customizer/evaluation/: analyze_keywords.ipynb  keyword_evaluator.py  keyword_extractor_simple.md  keyword_extractor_simple.py
src/jobseeker_agent/customizer/interface/: main.py  routes.py  state.py  tasks.py  utils.py
src/jobseeker_agent/data/evaluator/: evals.json
src/jobseeker_agent/data/evaluator_labels/: label.json
src/jobseeker_agent/data/linkedin_keywords/: blacklist.json  main_fields.json  main_jobtitle.json  secondary_jobtitle.json
src/jobseeker_agent/data/prompts/: evaluation.md  keyword_corrector.md  keyword_extractor.md  keyword_inserter.md  profil_pro.md  ranker.md  summarize_offer.md  (+1 more)
src/jobseeker_agent/evaluator/: analyze_evals.py  evaluator.py  job_evaluator.py  label_jobs.py  review_dashboard.py  review_job.py
src/jobseeker_agent/interface/: main.py  state.py
src/jobseeker_agent/reviewer/: README.md  review_batch.py  review_dashboard.py  review_single_job.py
src/jobseeker_agent/scraper/: README.md  clean_closed_jobs.py  date_parser.py  extract_job_details.py  job_manager.py  linkedin_analyzer.py  linkedin_query.py  linkedin_scraper.py  raw_jobs_manager.py  run_scraper.py  update_job_statuses.py
src/jobseeker_agent/utils/: llm.py  paths.py  visualizations.py
(+45 files in other folders)
