[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jobseeker_agent"
version = "0.0.1"
authors = [
  { name="Hugo Vaillaud", email="hugovaillaud@gmail.com" },
]
description = "A small package to automate the job search and application process"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "html2text",
    "openai",
    "flask"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["jobseeker_agent"]
